Reformat code and move directories